syntax = "proto3";

package core;
option go_package="./core";

message PageableInfo {
  uint32  totalPage = 1;
  uint32  page    = 2;
}

message UserInfo{
 uint32 id = 1;
 string uuid = 2;
 string name = 3;
 string avatar = 4;
 string email = 5;
 string cover = 6;
 string statusMessage = 7;
}

message FriendInfo{
  uint32 id = 1;
  string uuid = 2;
  string nickName = 3;
  string avatar = 4;
}


message GroupMemberInfo {
  UserInfo userInfo = 1;
  bool isGroupLead = 2;
}

message GroupInfo {
  uint32 id = 1;
  string uuid = 2;
  string name = 3;
  string avatar = 4;
  string desc = 5;
  uint32 createdAt = 6;
}

message FullGroupInfo {
  GroupInfo info = 1;
  uint32 members = 2;
  bool isJoined = 3;
  bool isOwner = 4;
  string createdBy= 5;
}

message StickerInfo{
  string stickerId = 1;
  string stickerName = 2;
  string stickerThum = 3;
}


message StoryInfo {
  uint32 storyId = 1;
  string storyUUID = 2;
  string storyURL = 3;
}

message StorySeenUserBasicInfo{
  uint32 Id = 1;
  string avatar = 2;
}
message FriendStory{
  uint32 userId = 1;
  string uuid = 2;
  string username = 3;
  string avatar = 4;
  bool isSeen = 5;
  uint32 latestStoryTimeStamp = 6;
}
message StorySeenInfo{
  uint32 userId = 1;
  string uuid = 2;
  string username = 3;
  string avatar = 4;
  bool isLiked = 5;
  uint32 createdAt = 6;
}

//================MESSAGE============================
//================USER MESSAGE============================
message SignUpReq{
  string email = 1;
  string name = 2;
  string password = 3;
}
message SignUpResp{
  int32 code = 1;
  string token = 2;
  int32 expiredTime = 3;
}

message SignInReq{
  string email = 1;
  string password = 3;
}
message SignInResp{
  int32 code = 1;
  string token = 2;
  int32 expiredTime = 3;
  optional UserInfo userInfo = 5;
}

message GetUserInfoReq{
  optional uint32 userId = 1;
  optional string uuid = 2;
}
message GetUserInfoResp{
  int32  code = 1;
  string uuid = 2;
  string name = 3;
  string email = 4;
  string avatar = 5;
  string cover = 6;
  string statusMessage = 7;
}

message GetUserFriendProfileReq{
  uint32 userId = 1;
  optional uint32 FriendUserId = 2;
  optional string FriendUuid = 3;
}
message GetUserFriendProfileResp{
  int32 code = 1;
  UserInfo userInfo = 2;
  bool isFriend = 3;
}

message UpdateUserStatusReq{
  uint32 userId = 1;
  string status = 2;
}
message UpdateUserStatusResp{
  int32 code = 1;
}

message UpdateUserInfoReq{
  uint32 userId = 1;
  string name = 2;
}
message UpdateUserInfoResp{
  int32 code = 1;
}

message UploadUserAvatarReq{
  uint32 userId = 1;
  bytes data = 2;
  string fileName = 3;
}
message UploadUserAvatarResp{
  int32 code = 1;
  string path = 2;
  string fileName = 3;
}

message UploadUserCoverReq{
  uint32 userId = 1;
  bytes data = 2;
  string fileName = 3;
}
message UploadUserCoverResp{
  int32 code = 1;
  string path = 2;
}

message SearchUserReq{
  uint32 userId = 1;
  string query = 2;
}
message SearchUserResp{
  message result {
    UserInfo userInfo = 1;
    bool isFriend = 2;
  }
  int32 code = 1;
  repeated result searchResults = 2;
}

message AddStickerReq{
  uint32 userId = 1;
  string stickerUUID = 2;
}
message AddStickerResp{
  int32 code = 1;
}

message DeleteStickerReq{
  uint32 userId = 1;
  string stickerUUID = 2;
}
message DeleteStickerResp{
  int32 code = 1;
}

message IsStickerExistReq{
  uint32 userId = 1;
  string stickerUUID = 2;
}
message IsStickerExistResp{
  int32 code = 1;
  bool isExist = 2;
}

message GetUserStickerReq{
  uint32 userId = 1;
}
message GetUserStickerResp{
  int32 code = 1;
  repeated StickerInfo stickerInfo = 2;
}

//================STORY MESSAGE============================
//Story Message

message AddStoryReq{
  uint32 userId = 1;
  string storyImgFileName = 2;
  bytes data = 3; //story image data.
}
message AddStoryResp{
  uint32 code = 1;
  StoryInfo info = 2;
}

message GetUserStoryReq{
  uint32 userId = 1;
  uint32 storyCreatedTime = 2;
}
message GetUserStoryResp{
  uint32 code = 1;
  repeated StoryInfo stories = 2;
  uint32 lastStoryId = 3;
}

message GetActiveStoryReq{
  uint32 userId = 1;
  uint32 page = 2;
  uint32 limit = 3;
  uint32 latestID = 4;
  uint32 storyCreatedTime = 5;
}
message GetActiveStoryResp{
  uint32 code = 1;
  PageableInfo pageInfo = 2;
  uint32 currentStoryTime = 3;
  repeated FriendStory friendStories = 4;
}

message DeleteStoryReq{
  uint32 userId = 1;
  uint32 storyId = 2;
}
message DeleteStoryResp{
  uint32 code = 1;
}

message GetStoryInfoByIdRep{
  uint32 storyId = 1;
  uint32 userId = 2;
}
message GetStoryInfoByIdResp{
  uint32 code = 1;
  StoryInfo info = 2;
  bool isLiked = 3;
  uint32 totalSeenCount = 4;
  uint32 createdAt = 5;
  repeated StorySeenUserBasicInfo storySeenList = 6;
}

message UpdateStorySeenReq{
  uint32 userId = 1;
  uint32 storyId = 2;
  uint32 friendId = 3;
}
message UpdateStorySeenResp{
  uint32 code = 1;
}

message CreateStoryLikeReq{
  uint32 userId = 1;
  uint32 StoryId = 2;
}
message CreateStoryLikeResp{
  uint32 code = 1;
}

message DeleteStoryLikeReq{
  uint32 userId = 1;
  uint32 storyId = 2;
}
message DeleteStoryLikeResp{
  uint32 code = 1;
}

message GetStorySeenListReq{
  uint32 userId = 1;
  uint32 storyId = 2;
}
message GetStorySeenListResp{
  uint32 code = 1;
  uint32 totalSeen = 2;
  repeated StorySeenInfo seenList = 3;
}

//================STICKER MESSAGE============================
//Sticker Message
message stickerData {
  string name = 1;
  bytes data = 2;
}

message StickerFileMap {
  repeated stickerData data = 1;
}
message CreateStickerGroupReq{
  int32 userId = 1;
  string stickerName = 2;
  map <string, StickerFileMap > stickerData = 3;
}
message CreateStickerGroupResp{
  int32 code = 1;
  string stickerGroupUUID = 2;
}

message GetStickerResourcesReq{
  string stickerGroupUUID = 1;
}
message GetStickerResourcesResp{
  int32 code = 1;
  string stickerId = 2;
  repeated string paths = 3;
}

message GetStickerInfoReq{
  string stickerGroupUUID = 1;
}
message GetStickerInfoResp{
  int32 code = 1;
  StickerInfo info = 2;
}

message GetStickerListReq{}
message GetStickerListResp{
  int32 code = 1;
  repeated StickerInfo sticker = 2;
}


//================FRIEND MESSAGE============================
//friend message
message AddFriendReq{
  uint32 userId = 1;
  uint32 friendId = 2;
}
message AddFriendResp{
  uint32 code = 1;
}

message DeleteFriendReq{
  uint32 userId = 1;
  uint32 friendId = 2;
}
message DeleteFriendResp{
  uint32 code = 1;
}

message GetFriendListReq{
  uint32 userId = 1;
  uint32 page = 2;
  uint32 limit = 3;
}
message GetFriendListResp{
  uint32 code = 1;
  PageableInfo pageInfo = 2;
  repeated UserInfo friendList = 3;
}

message GetFriendInfoReq{
  uint32 userId = 1;
  string uuid = 2;
}
message GetFriendInfoResp{
  uint32 code = 1;
  FriendInfo info = 2;
}


//================GROUP MESSAGE============================
//group message
message CreateGroupReq{
  uint32 userId = 1;
  string groupName = 2;
  repeated uint32 groupMembers = 3;
  bytes avatarData = 4;
}
message CreateGroupResp{
  uint32 code = 1;
  string groupUUID = 2;
  string avatar = 3;
}

message JoinGroupReq{
  uint32 userId = 1;
  uint32 groupId = 2;
}
message JoinGroupResp{
  uint32 code = 1;
}

message LeaveGroupReq{
  uint32 userId = 1;
  uint32 groupId = 2;
}
message LeaveGroupResp{
  uint32 code = 1;
}

message DeleteGroupReq{
  uint32 userId = 1;
  uint32 groupId = 2;
}
message DeleteGroupResp{
  uint32 code = 1;
}

message GetGroupMembersReq{
  uint32 userId = 1;
  uint32 groupID = 2;
  uint32 page = 3;
  uint32 limit = 4;
  uint32 latestId = 5;

}
message GetGroupMembersResp{
  uint32 code = 1;
  PageableInfo pageInfo = 2;
  repeated GroupMemberInfo memberInfo = 3;
}

message UpdateGroupInfoReq{
  uint32 userId = 1;
  uint32 groupId = 2;
  string groupName = 3;
  string groupDesc = 4;
}
message UpdateGroupInfoResp{
  uint32 code = 1;
}

message UploadGroupAvatarReq{
  uint32 userId = 1;
  uint32 groupId = 2;
  bytes data = 3;
  string avatarFileName = 4;
}
message UploadGroupAvatarResp{
  uint32 code = 1;
  string path = 2;
}

message GetUserGroupReq{
  uint32 userId = 1;
  uint32 page = 3;
  uint32 limit = 4;
  uint32 latestId = 5;
}
message GetUserGroupResp{
  uint32 code = 1;
  PageableInfo pageInfo = 2;
  repeated GroupInfo groupInfo = 3;
}

message SearchGroupReq{
  uint32 userId = 1;
  string query = 2;
}
message SearchGroupResp{
  uint32 code = 1;
  repeated FullGroupInfo results = 2;
}

message GetGroupInfoByUUIDReq{
  uint32 userId = 1;
  string uuid = 2;
}
message GetGroupInfoByUUIDResp{
  uint32 code = 1;
  FullGroupInfo result = 2;
}

message CountUserGroupReq{
  uint32 userId = 1;
}
message CountUserGroupResp{
  uint32 code = 1;
  uint32 total = 2;
}

//Message

message GetMessagesReq{
  uint32 userId = 1;
  uint32 messageType = 2;
  uint32 sourceId = 3;
  uint32 limit = 4;
  uint32 latestId = 5;
}
message GetMessagesResp{
  uint32 code = 1;
  repeated MessageUser messages = 2;
}

message DeleteMessageReq{
  uint32 userId = 1;
  uint32 msgId = 2;
}
message DeleteMessageResp{
  uint32 code = 1;
}

message MessageUser{
  uint32 messageId = 1;
  uint32 fromId = 2;
  uint32 toId = 3;
  string content = 4;
  string contentType = 5;
  uint32 messageType = 6;
  string url = 7;
  string fileName = 8;
  uint32 fileSize = 9;
  uint32 storyTime = 10;
  uint32 createdAt = 11;
}


//===================SERVICE=========================================
//UserService
service UserService {
  rpc SignUp(SignUpReq) returns (SignUpResp);
  rpc SignIn(SignInReq) returns (SignInResp);
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp);

  rpc GetUserFriendProfile(GetUserFriendProfileReq) returns (GetUserFriendProfileResp);
  rpc UpdateUserInfo(UpdateUserInfoReq) returns (UpdateUserInfoResp);
  rpc UpdateUserStatus(UpdateUserStatusReq) returns (UpdateUserStatusResp);
  rpc UploadUserAvatar( UploadUserAvatarReq) returns (UploadUserAvatarResp);
  rpc UploadUserCover( UploadUserCoverReq) returns (UploadUserCoverResp);
  rpc SearchUser(SearchUserReq) returns (SearchUserResp);
  rpc AddUserSticker(AddStickerReq) returns (AddStickerResp);
  rpc DeleteUserSticker(DeleteStickerReq) returns (DeleteStickerResp);
  rpc IsStickerExist(IsStickerExistReq) returns (IsStickerExistResp);
  rpc getUserStickers(GetUserStickerReq) returns (GetUserStickerResp);
}

//Story Service
service StoryService {
  rpc AddStory( AddStoryReq) returns (AddStoryResp);
  rpc DeleteStory(DeleteStoryReq) returns (DeleteStoryResp);
  rpc GetUserStoriesByUserId(GetUserStoryReq) returns (GetUserStoryResp);
  rpc GetActiveStories(GetActiveStoryReq) returns (GetActiveStoryResp);
  rpc UpdateStorySeen(UpdateStorySeenReq) returns (UpdateStorySeenResp);
  rpc CreateStoryLike(CreateStoryLikeReq) returns (CreateStoryLikeResp);
  rpc DeleteStoryLike(DeleteStoryLikeReq) returns (DeleteStoryLikeResp);
  rpc GetStoryInfo(GetStoryInfoByIdRep) returns (GetStoryInfoByIdResp);
  rpc GetStorySeenListInfo(GetStorySeenListReq) returns (GetStorySeenListResp);
}

//Group Service
service GroupService {
  rpc CreateGroup(CreateGroupReq) returns (CreateGroupResp);
  rpc JoinGroup(JoinGroupReq) returns (JoinGroupResp);
  rpc LeaveGroup(LeaveGroupReq) returns (LeaveGroupResp);
  rpc DeleteGroup(DeleteGroupReq) returns (DeleteGroupResp);
  rpc GetGroupMembers(GetGroupMembersReq) returns (GetGroupMembersResp);
  rpc UploadGroupAvatar(UploadGroupAvatarReq) returns (UploadGroupAvatarResp);
  rpc UpdateGroupInfo(UpdateGroupInfoReq) returns (UpdateGroupInfoResp);
  rpc GetUserGroups(GetUserGroupReq) returns (GetUserGroupResp);
  rpc SearchGroup(SearchGroupReq) returns (SearchGroupResp);
  rpc GetGroupInfoByUUID(GetGroupInfoByUUIDReq) returns (GetGroupInfoByUUIDResp);
  rpc CountUserGroup(CountUserGroupReq) returns (CountUserGroupResp);
}

//Friend Service
service FriendService {
  rpc AddFriend(AddFriendReq) returns (AddFriendResp);
  rpc DeleteFriend(DeleteFriendReq) returns (DeleteFriendResp);
  rpc GetFriendList(GetFriendListReq) returns (GetFriendListResp);
  rpc GetFriendInformation(GetFriendInfoReq) returns (GetFriendInfoResp);
}

//Sticker Service
service StickerService {
  rpc CreateStickerGroup(CreateStickerGroupReq) returns (CreateStickerGroupResp);
  rpc GetStickerGroupResources(GetStickerResourcesReq) returns (GetStickerResourcesResp);
  rpc GetStickerGroupInfo(GetStickerInfoReq) returns (GetStickerInfoResp);
  rpc GetStickerGroupList(GetStickerListReq) returns (GetStickerListResp);
}

//ChatMessage Service
service ChatService {
  rpc GetMessages(GetMessagesReq) returns (GetMessagesResp);
  rpc DeleteMessage(DeleteMessageReq) returns (DeleteMessageResp);
}
